--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
+<!DOCTYPE html>
+<html>
 
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <title>replit</title>
+  <link href="style.css" rel="stylesheet" type="text/css" />
+</head>
+
+<body>
+  <h1>Basis Social Media</h1>
+  <img src = "bglogo.png" id = "poop"><br>
+ <input type = "text" placeholder = "username" required><br>
+  <input type = "password" placeholder="password" required><br>
+  <input type = "submit" value = "login" id = "pee" onclick = "checkCredentials()">
+  <script src="script.js"></script>
+</body>
+
+</html>
