--- a/meme.html
+++ b/meme.html
@@ -11,6 +11,9 @@
 <body>
   <h1>Basis Social Media</h1>
   <img src = "bglogo.png" id = "poop"><br>
+  <h1>Trump Meme Page</h1>
+  <div class = "div" id = "output"></div>
+  <input type = "text" id = "meme" placeholder = "enter meme"><input type = "button" value = "Upload" onclick = meme()>
 
   <script src="script.js"></script>
 </body>
