--- a/meme.html
+++ b/meme.html
@@ -13,7 +13,7 @@
   <img src = "bglogo.png" id = "poop"><br>
   <h1>Trump Meme Page</h1>
   <div class = "div" id = "output"></div>
-  <input type = "text" id = "meme" placeholder = "enter meme"><input type = "button" value = "Upload" onclick = meme()>
+  <input type = "text" id = "meme" placeholder = "enter meme"><input type = "button" value = "Upload" onclick = "meme()">
 
   <script src="script.js"></script>
 </body>
