--- a/meme.html
+++ b/meme.html
@@ -12,7 +12,7 @@
   <h1>Basis Social Media</h1>
   <img src = "bglogo.png" id = "poop"><br>
   <h1>Trump Meme Page</h1>
-  <div class = "div" id = "output"></div>
+  <div class = "div" id = "outputy"></div>
   <input type = "text" id = "meme" placeholder = "enter meme"><input type = "button" value = "Upload" onclick = "meme()">
 
   <script src="script.js"></script>
