--- a/meme.html
+++ b/meme.html
@@ -11,9 +11,9 @@
 <body>
   <h1>Basis Social Media</h1>
   <img src = "bglogo.png" id = "poop"><br>
-  <h1>Trump Meme Page</h1>
-  <div class = "div" id = "outputy"></div>
-  <input type = "text" id = "meme" placeholder = "enter meme"><input type = "button" value = "Upload" onclick = "document.getElementById("outputy").innerHTML += document.getElementById("meme").value;">
+  <h1>Messaging Group Page</h1>
+  <div class = "div" id = "outputy"> Whattsup Guys<br></div>
+  <input type = "text" id = "meme" placeholder = "enter meme"><input type = "button" value = "Upload" onclick = "document.getElementById("outputy").innerHTML += document.getElementById("meme").value; + '<br>'">
 
   <script src="script.js"></script>
 </body>
