--- a/profile.html
+++ b/profile.html
@@ -11,7 +11,10 @@
 <body>
   <h1>Basis Social Media</h1>
   <img src = "bglogo.png" id = "poop"><br>
- 
+  Profile page
+  name:<input type = "text" value = "Trump"><br>
+  Hobbies:<input type = "text" value = "Golf"><br>
+  Description:<input type = "text" value = "MakeAmericaGreatAgain"><br>
   <script src="script.js"></script>
 </body>
 
