--- a/ban.html
+++ b/ban.html
@@ -1,1 +1,17 @@
+<!DOCTYPE html>
+<html>
 
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <title>replit</title>
+  <link href="style.css" rel="stylesheet" type="text/css" />
+</head>
+
+<body>
+  <h1>Basis Social Media</h1>
+  <img src = "bglogo.png" id = "poop"><br>
+  <h1>YOU ARE BANNED</h1>
+</body>
+
+</html>
